# nonebot-plugin-rtfm

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_rtfm/: __init__.py  algolia.py  config.py  parser.py  plugins.py
tests/: conftest.py  test_nonebot2.py  test_onebot_adapter.py  test_util.py
